testdata/baselines/reference/submodule/compiler/interfaceMayNotBeExtendedWitACall.errors.txt
error TS-1: Pre-emit (1) and post-emit (2) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
interfaceMayNotBeExtendedWitACall.ts(3,24): error TS2499: An interface can only extend an identifier/qualified-name with optional type arguments.


!!! error TS-1: Pre-emit (1) and post-emit (2) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2693 interfaceMayNotBeExtendedWitACall.ts:3:24: 'color' only refers to a type, but is being used as a value here.
==== interfaceMayNotBeExtendedWitACall.ts (1 errors) ====
    interface color {}
    
    interface blue extends color() { // error
                           ~~~~~~~
!!! error TS2499: An interface can only extend an identifier/qualified-name with optional type arguments.
    
    }
    